@@ -1,6 +1,8 @@
 2003.02.07
   - fixed a stack overflow bug when using the fill tool on large images
   - removed the options dialog box from the editor
+  - fix trigger activation so you can activate a trigger more than
+    once on a map
 
 2003.02.05
   - fixed GrabImage crash bug in standard16 and interpolate16
